Ensure tooltips are visible outside of left panel

--- a/packages/sparkle/src/components/split-pane/split-pane.css
+++ b/packages/sparkle/src/components/split-pane/split-pane.css
@@ -37,7 +37,6 @@
 :host > .root > .panel {
   position: relative;
   align-self: stretch;
-  overflow: hidden;
 }
 :host(:not([vertical])) > .root > .panel {
   max-width: calc(100% - var(--min-panel-width));
